2003-01-19  Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCmain.c (linkEdit): rename mem and map files even in case of failure
	* src/SDCCpeeph.c (replaceRule): fix bug #663503
	* support/regression/Makefile: separate temp files for ports
	* support/regression/generate-cases.py: separate temp files for ports
	* src/mcs51/peeph.def: Frieder: removed 237 (obsolete by 236g and 105); added 237 a/b
	* src/ds390/peeph.def: Frieder: removed 237 (obsolete by 236g and 105); added 237 a/b

2003-01-19  Bernhard Held <bernhard@bernhardheld.de>

	* moved tinitalk to device/examples/ds390

2003-01-14  Bernhard Held <bernhard@bernhardheld.de>

	* as/mcs51/lkmem.c: rflag is for DS390
	* src/SDCCglobl.h: removed out_name and options stackOnData, genericPtr
	* src/SDCCmain.c (optionsTable, setDefaultOptions): removed --stack-after-data and --generic
			 (linkEdit): move mem- and map-files the same way as ihx-files
	* src/z80/main.c (_setDefaultOptions): removed --generic
	* src/SDCCmain.c (_processC1Arg, parseCmdLine, main): --c1mode works again
	* src/SDCCglue.c (createInterruptVect, glue): --c1mode works again
	* src/pic/glue.c (picglue): --c1mode works again
	* src/pic16/glue.c (pic16glue): --c1mode works again
	* src/asm.c (printCLine): fix #660034

2003-01-13  Bernhard Held <bernhard@bernhardheld.de>

	* src/ds390/peeph.def: fix #123; add 14 rules by Fiorenzo D. Ramaglia <fd.ramaglia@tin.it>, 1 by Frieder
	* src/mcs51/peeph.def: fix #123; add 14 rules by Fiorenzo, 1 by Frieder
	* src/mcs51/gen.c (genFunction): emit r0 instead of ar0 by Fiorenzo
	* as/mcs51/lkmem (summary): better fix for sp problem
	* src/SDCCglue.c (glue): __start_stack - 1, saves 1 byte!
	* src/ds390/main.c (_ds390_finaliseOptions, _tininative_finaliseOptions): stack_loc = 0x400008
	* support/regression/ports/*/spec.mk: moving testfwk-object to port dir allow parallel execution of regression tests
					      remove --stack-after-data

2003-01-12  Bernhard Held <bernhard@bernhardheld.de>
